---
source: src/parser/item.rs
expression: "test_parse(\"data Person { name: string, age: uint }\", |p| p.parse_module())"
---
(Module(
  items: [
    Struct(Struct(
      ident: Unresolved("Person"),
      ty_params: [],
      fields: [
        StructField(
          name: "name",
          ty: Constructed(
            ident: Unresolved("string"),
            params: [],
          ),
        ),
        StructField(
          name: "age",
          ty: Constructed(
            ident: Unresolved("uint"),
            params: [],
          ),
        ),
      ],
    )),
  ],
), "", [])
